--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCSlWLFxEcft/4ZIZq/gL/",
+      "authorship_tag": "ABX9TyOW12GPPru1FdMTEmwpkCmG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,11 +324,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "0cS_5k7N-i8P",
-        "outputId": "761f6580-825b-4b7e-d832-eeb1bd497d6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0cS_5k7N-i8P",
+        "outputId": "761f6580-825b-4b7e-d832-eeb1bd497d6a"
       },
       "execution_count": 22,
       "outputs": [
@@ -397,12 +397,12 @@
         "'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n"
       ],
       "metadata": {
-        "id": "CPxXWPN2_HMB",
-        "outputId": "2c818144-d588-4dc5-d9b6-e469d2da6204",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "CPxXWPN2_HMB",
+        "outputId": "2c818144-d588-4dc5-d9b6-e469d2da6204"
       },
       "execution_count": 26,
       "outputs": [
@@ -427,12 +427,12 @@
         "'FizzBuzz' if n % 15 == 0 else 'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n"
       ],
       "metadata": {
-        "id": "MGub-V7n_a8L",
-        "outputId": "bbe0035a-faf7-4e5f-f414-55b5edf3692b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "MGub-V7n_a8L",
+        "outputId": "bbe0035a-faf7-4e5f-f414-55b5edf3692b"
       },
       "execution_count": 27,
       "outputs": [
@@ -457,11 +457,11 @@
         "['FizzBuzz' if n % 15 == 0 else 'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n for n in range(1, 21)]"
       ],
       "metadata": {
-        "id": "aroqh5II_c2B",
-        "outputId": "4f7a283b-52a4-4e73-abec-edfbe9de943f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aroqh5II_c2B",
+        "outputId": "4f7a283b-52a4-4e73-abec-edfbe9de943f"
       },
       "execution_count": 29,
       "outputs": [
@@ -538,11 +538,11 @@
         "print(squares)"
       ],
       "metadata": {
-        "id": "7aQdUjKI_iTC",
-        "outputId": "53a6b5ea-33d2-49a9-8a9a-913b91e9df07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7aQdUjKI_iTC",
+        "outputId": "53a6b5ea-33d2-49a9-8a9a-913b91e9df07"
       },
       "execution_count": 2,
       "outputs": [
@@ -573,11 +573,11 @@
         "print(even_squares)"
       ],
       "metadata": {
-        "id": "ffmhpq26k1nu",
-        "outputId": "1d5e58b3-d105-4523-a624-ae7ab633e536",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ffmhpq26k1nu",
+        "outputId": "1d5e58b3-d105-4523-a624-ae7ab633e536"
       },
       "execution_count": 3,
       "outputs": [
@@ -596,11 +596,11 @@
         "{i:i*2 for i in range(1,21) if i%2==0}"
       ],
       "metadata": {
-        "id": "zqa7xsLGlZtj",
-        "outputId": "3253cdc8-6d00-4c35-8b66-5a31e62c648e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zqa7xsLGlZtj",
+        "outputId": "3253cdc8-6d00-4c35-8b66-5a31e62c648e"
       },
       "execution_count": 6,
       "outputs": [
@@ -641,11 +641,11 @@
         "print(even_numbers)"
       ],
       "metadata": {
-        "id": "K0gfv1N3l-32",
-        "outputId": "6f4f1e6b-e5bf-45f7-dd85-f744b936187b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K0gfv1N3l-32",
+        "outputId": "6f4f1e6b-e5bf-45f7-dd85-f744b936187b"
       },
       "execution_count": 7,
       "outputs": [
@@ -709,11 +709,11 @@
         "#The prefixes 0b, 0o, and 0x indicate binary, octal, and hexadecimal numbers respectively."
       ],
       "metadata": {
-        "id": "GYCBNWtDm5TH",
-        "outputId": "09f528e6-6199-4ee4-d4c5-97814ea7364e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GYCBNWtDm5TH",
+        "outputId": "09f528e6-6199-4ee4-d4c5-97814ea7364e"
       },
       "execution_count": 10,
       "outputs": [
@@ -741,13 +741,13 @@
         "print(int(hex_str, 16))    # Output: 25"
       ],
       "metadata": {
-        "id": "mUNxbfeYq0WH",
-        "outputId": "520cf652-de6a-482a-fd10-711844727ea4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mUNxbfeYq0WH",
+        "outputId": "268aec2d-c5d4-485f-bf09-133f0446e12f"
       },
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,6 +759,242 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 7-3-2025"
+      ],
+      "metadata": {
+        "id": "amcoB7AonDFF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def imute(x):\n",
+        "  x+=1\n",
+        "\n",
+        "\n",
+        "a=1\n",
+        "imute(a)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "OqM3ytNNOXcN",
+        "outputId": "447c31a0-923f-4005-9908-a2916f4a60ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(n):\n",
+        "  print(f'input {n}')\n",
+        "  if n <= 1:\n",
+        "    return 1\n",
+        "  return fact(n-1)*n"
+      ],
+      "metadata": {
+        "id": "ygO7Krdlnjln"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact(5)"
+      ],
+      "metadata": {
+        "id": "3vGURl_7mW8P",
+        "outputId": "f6fced1a-c5fb-4012-937b-c2407564ef5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input 5\n",
+            "input 4\n",
+            "input 3\n",
+            "input 2\n",
+            "input 1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Explaination:\n",
+        "\n",
+        "If you call fact(5), it will calculate as follows:\n",
+        "\n",
+        "fact(5) is called.\n",
+        "\n",
+        "Since 5 is greater than 1, it goes to the recursive step.\n",
+        "\n",
+        "fact(4) is called (recursively).\n",
+        "\n",
+        "... (similar recursive calls for fact(3), fact(2))\n",
+        "\n",
+        "fact(1) is called. This hits the base case and returns 1.\n",
+        "\n",
+        "The values are then calculated backwards:\n",
+        "\n",
+        "fact(2) returns fact(1) * 2 which is 1 * 2 = 2\n",
+        "\n",
+        "fact(3) returns fact(2) * 3 which is 2 * 3 = 6\n",
+        "\n",
+        "fact(4) returns fact(3) * 4 which is 6 * 4 = 24\n",
+        "\n",
+        "fact(5) returns fact(4) * 5 which is 24 * 5 = 120\n",
+        "\n",
+        "Therefore, fact(5) would eventually return 120."
+      ],
+      "metadata": {
+        "id": "lHr4hvABvP9a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%pip install nltk"
+      ],
+      "metadata": {
+        "id": "xs8GLS23qVs6",
+        "outputId": "e48108be-e392-441d-a5aa-56efb3db9481",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.11/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.11/dist-packages (from nltk) (8.1.8)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.11/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.11/dist-packages (from nltk) (2024.11.6)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from nltk) (4.67.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('vader_lexicon')"
+      ],
+      "metadata": {
+        "id": "Bv1563Feqq7C",
+        "outputId": "2008e5da-3a41-47b4-cc52-436c10dc949e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Classic examples of AI and ML\n",
+        "# Here are a few classic examples of projects in the fields of AI and ML, along with simplified source code snippets. Let us dive in:\n",
+        "#\tSentiment analysis: Sentiment analysis is the process of determining the sentiment or emotion behind a given text. Here is a simple example using Python and the Natural Language Toolkit (NLTK) library:\n",
+        "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+        "\n",
+        "def analyze_sentiment(text):\n",
+        "    analyzer = SentimentIntensityAnalyzer()\n",
+        "    sentiment_scores = analyzer.polarity_scores(text)\n",
+        "    sentiment = sentiment_scores['compound']\n",
+        "\n",
+        "    if sentiment >= 0.05:\n",
+        "        return 'Positive'\n",
+        "    elif sentiment <= -0.05:\n",
+        "          return 'Negative'\n",
+        "    else:\n",
+        "        return 'Neutral'\n",
+        "\n",
+        "# Example usage\n",
+        "text = \"I love this movie! but it can much better will give 6 out 10 rating\"\n",
+        "sentiment = analyze_sentiment(text)\n",
+        "print(sentiment)"
+      ],
+      "metadata": {
+        "id": "Av0T8R5XuLvg",
+        "outputId": "2eaef5d9-ac3b-42bf-b192-3d2ca5ba816a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Positive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ebx0dyeAqSLL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
