--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOW12GPPru1FdMTEmwpkCmG",
+      "authorship_tag": "ABX9TyMo2woevULvTCLiWgS6zORM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -781,11 +781,11 @@
         "print(a)"
       ],
       "metadata": {
-        "id": "OqM3ytNNOXcN",
-        "outputId": "447c31a0-923f-4005-9908-a2916f4a60ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OqM3ytNNOXcN",
+        "outputId": "447c31a0-923f-4005-9908-a2916f4a60ff"
       },
       "execution_count": 17,
       "outputs": [
@@ -799,13 +799,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Recursion** - Factorial function"
+      ],
+      "metadata": {
+        "id": "YmAIKlPFKxia"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "def fact(n):\n",
+        "def fact(n): # 5..4..3..2..1\n",
         "  print(f'input {n}')\n",
         "  if n <= 1:\n",
         "    return 1\n",
-        "  return fact(n-1)*n"
+        "  return fact(n-1)*n #5..4..3..2..1  -> (f(4)*5) * (f(3)*4) * (f(2)*3) * (f(1) * 2) --> {(f(1) * 2) will return 1}\n",
+        "                                                                       # (1 * 2)\n",
+        "                                        # (24 * 5) * (9 * 4) * (3 * 3) * (1 * 2) = 120"
       ],
       "metadata": {
         "id": "ygO7Krdlnjln"
@@ -819,11 +830,11 @@
         "fact(5)"
       ],
       "metadata": {
-        "id": "3vGURl_7mW8P",
-        "outputId": "f6fced1a-c5fb-4012-937b-c2407564ef5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3vGURl_7mW8P",
+        "outputId": "f6fced1a-c5fb-4012-937b-c2407564ef5c"
       },
       "execution_count": 29,
       "outputs": [
@@ -889,11 +900,11 @@
         "%pip install nltk"
       ],
       "metadata": {
-        "id": "xs8GLS23qVs6",
-        "outputId": "e48108be-e392-441d-a5aa-56efb3db9481",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xs8GLS23qVs6",
+        "outputId": "e48108be-e392-441d-a5aa-56efb3db9481"
       },
       "execution_count": 31,
       "outputs": [
@@ -917,11 +928,11 @@
         "nltk.download('vader_lexicon')"
       ],
       "metadata": {
-        "id": "Bv1563Feqq7C",
-        "outputId": "2008e5da-3a41-47b4-cc52-436c10dc949e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Bv1563Feqq7C",
+        "outputId": "2008e5da-3a41-47b4-cc52-436c10dc949e"
       },
       "execution_count": 32,
       "outputs": [
@@ -970,11 +981,11 @@
         "print(sentiment)"
       ],
       "metadata": {
-        "id": "Av0T8R5XuLvg",
-        "outputId": "2eaef5d9-ac3b-42bf-b192-3d2ca5ba816a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Av0T8R5XuLvg",
+        "outputId": "2eaef5d9-ac3b-42bf-b192-3d2ca5ba816a"
       },
       "execution_count": 34,
       "outputs": [
