--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo2woevULvTCLiWgS6zORM",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNIrqyz4NN7MFZKUuDkyT6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +90,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Functions\n",
+        "\n",
+        "## Parameter:\n",
+        "\n",
+        "A parameter is a variable listed inside the parentheses in the function definition. It acts as a placeholder for a value that the function expects to receive when it is called.\n",
+        "\n",
+        "## Argument:\n",
+        "\n",
+        "An argument is the actual value that is passed to the function when it is called. It is the data that the function will use to perform its operations."
+      ],
+      "metadata": {
+        "id": "9YF-EAyFhz52"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet(name):  # name is a parameter\n",
+        "    print(\"Hello, \" + name)\n",
+        "\n",
+        "greet(\"Alice\")  # \"Alice\" is an argument\n",
+        "greet(\"Bob\")    # \"Bob\" is an argument"
+      ],
+      "metadata": {
+        "id": "VuDdZE6lh1ac",
+        "outputId": "183cf01e-e8ba-4c75-c3ee-e9c6dc5b3ced",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Alice\n",
+            "Hello, Bob\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Types of arguments in python:\n",
+        "\n",
+        "    Positional Arguments\n",
+        "    Keyword Arguments"
+      ],
+      "metadata": {
+        "id": "s38m8wt5i2b2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R_mmXfNZi80V"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -893,6 +960,168 @@
       "metadata": {
         "id": "lHr4hvABvP9a"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**iteration** - Factorial function"
+      ],
+      "metadata": {
+        "id": "Z-CYom0SMxsP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact_iteration(n):\n",
+        "  result  = 1\n",
+        "  while n>=1:\n",
+        "    result = result * n\n",
+        "    n -= 1\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "h-dDQ9PCMwzj"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact_iteration(5)"
+      ],
+      "metadata": {
+        "id": "C84H-kNEMwwv",
+        "outputId": "09bab698-8f88-4892-b68c-b5d614098128",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you call fact_iteration(5), it will calculate the factorial of 5 (5!) as follows:\n",
+        "\n",
+        "result starts at 1.\n",
+        "\n",
+        "In the loop:\n",
+        "    # result becomes 1 * 5 = 5\n",
+        "    # n becomes 4\n",
+        "\n",
+        "Next iteration:\n",
+        "    # result becomes 5 * 4 = 20\n",
+        "    # n becomes 3\n",
+        "\n",
+        "Next iteration:\n",
+        "    # result becomes 20 * 3 = 60\n",
+        "    # n becomes 2\n",
+        "\n",
+        "Next iteration:\n",
+        "      result becomes 60 * 2 = 120\n",
+        "      n becomes 1\n",
+        "\n",
+        "Loop ends because n is now 1.\n",
+        "The function returns the final value of result, which is 120."
+      ],
+      "metadata": {
+        "id": "lbK2_JdVRt7w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AhJZKiiYMwq4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GZmxsKnsMwoZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5gHHHd6AMwk4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gm5_XZ8SMwij"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "L33hh99uMwcz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P9bE_ifWMwaV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V4aXEVtkMwX_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4YTDNpyfMwVp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lApXqrhcMwKh"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
