count the numbers in list

--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNIrqyz4NN7MFZKUuDkyT6w",
+      "authorship_tag": "ABX9TyNIR4mvKAhKgfHoH6y43GkA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +178,7 @@
         },
         "outputId": "7253111b-068c-4fde-eec1-5554353c22c9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +208,7 @@
         "id": "R6FVzTH6ytOO",
         "outputId": "76ddd341-ce30-4daf-b2fb-41f26e7f581d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +241,7 @@
         "id": "4EuIl44m0t9O",
         "outputId": "099a7805-0521-4319-c3d7-9ba9a558f77e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +270,7 @@
         "id": "ggSFLB2l164r",
         "outputId": "9fa7ed20-0d06-4030-b21e-1c48ec739b48"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +296,7 @@
         "id": "JzarH_f82gj6",
         "outputId": "8f918d6a-8eaf-4256-d32f-38ed4b770499"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +322,7 @@
         "id": "drNo56-p2mJV",
         "outputId": "d331b60c-a242-4179-f9de-f6414db80bbc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +351,7 @@
         "id": "aQoolrZ33AiP",
         "outputId": "cec4f4b6-0324-474d-df36-4439ee6d0fc7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +396,7 @@
         "id": "0cS_5k7N-i8P",
         "outputId": "761f6580-825b-4b7e-d832-eeb1bd497d6a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +440,7 @@
         "id": "1BwKX3OF4EvN",
         "outputId": "515925da-2a13-4c6b-d9d7-30d8e0dc190a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +470,7 @@
         "id": "CPxXWPN2_HMB",
         "outputId": "2c818144-d588-4dc5-d9b6-e469d2da6204"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +500,7 @@
         "id": "MGub-V7n_a8L",
         "outputId": "bbe0035a-faf7-4e5f-f414-55b5edf3692b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +529,7 @@
         "id": "aroqh5II_c2B",
         "outputId": "4f7a283b-52a4-4e73-abec-edfbe9de943f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +610,7 @@
         "id": "7aQdUjKI_iTC",
         "outputId": "53a6b5ea-33d2-49a9-8a9a-913b91e9df07"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,7 +645,7 @@
         "id": "ffmhpq26k1nu",
         "outputId": "1d5e58b3-d105-4523-a624-ae7ab633e536"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,7 +668,7 @@
         "id": "zqa7xsLGlZtj",
         "outputId": "3253cdc8-6d00-4c35-8b66-5a31e62c648e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +713,7 @@
         "id": "K0gfv1N3l-32",
         "outputId": "6f4f1e6b-e5bf-45f7-dd85-f744b936187b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +781,7 @@
         "id": "GYCBNWtDm5TH",
         "outputId": "09f528e6-6199-4ee4-d4c5-97814ea7364e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +813,7 @@
         "id": "mUNxbfeYq0WH",
         "outputId": "268aec2d-c5d4-485f-bf09-133f0446e12f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +853,7 @@
         "id": "OqM3ytNNOXcN",
         "outputId": "447c31a0-923f-4005-9908-a2916f4a60ff"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +887,7 @@
       "metadata": {
         "id": "ygO7Krdlnjln"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -903,7 +902,7 @@
         "id": "3vGURl_7mW8P",
         "outputId": "f6fced1a-c5fb-4012-937b-c2407564ef5c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +982,7 @@
       "metadata": {
         "id": "h-dDQ9PCMwzj"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +997,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,31 +1042,83 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Problem: Count how many times a number appears in a list"
+      ],
+      "metadata": {
+        "id": "UQd_I5Q-JwgZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def count(number: list[int], target: int) -> int:\n",
+        "  count = 0\n",
+        "  for i in number:\n",
+        "    if i == target:\n",
+        "      count += 1\n",
+        "  return count"
+      ],
       "metadata": {
         "id": "AhJZKiiYMwq4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = [x for x in range(1,20)]\n",
+        "a.append(5)\n",
+        "a"
+      ],
       "metadata": {
-        "id": "GZmxsKnsMwoZ"
+        "id": "GZmxsKnsMwoZ",
+        "outputId": "3753e111-cce1-4623-f46c-f804b0a83877",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "count(a, 5)"
+      ],
       "metadata": {
-        "id": "5gHHHd6AMwk4"
+        "id": "5gHHHd6AMwk4",
+        "outputId": "dd63f1df-c867-4ae9-92df-96fd991f6cc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1135,7 +1186,7 @@
         "id": "xs8GLS23qVs6",
         "outputId": "e48108be-e392-441d-a5aa-56efb3db9481"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1214,7 @@
         "id": "Bv1563Feqq7C",
         "outputId": "2008e5da-3a41-47b4-cc52-436c10dc949e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,7 +1267,7 @@
         "id": "Av0T8R5XuLvg",
         "outputId": "2eaef5d9-ac3b-42bf-b192-3d2ca5ba816a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
