--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1fFGvoOqomBoeWX1o62ui",
+      "authorship_tag": "ABX9TyPCdGvjSG3puPiIs2wrRkXc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1133,20 +1133,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd"
+      ],
       "metadata": {
         "id": "L33hh99uMwcz"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pd.read_excel?"
+      ],
       "metadata": {
         "id": "P9bE_ifWMwaV"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
